// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input Component > renders inputProps and styles 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

<fieldset
  class="emotion-0"
  data-testid="notr-input"
  style="--color-primary-600: #3563de; --color-gray-400: #2a292e; --color-gray-600: #cdcdcd; --color-red-600: #c51d1db6;"
>
  <label
    class="emotion-1"
    for="notr"
  >
    Notr Input
  </label>
  <input
    class="emotion-2"
    name="notr"
    placeholder="Notr Input"
  />
</fieldset>
`;

exports[`Input Component > renders labelProps and styles 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

<fieldset
  class="emotion-0"
  data-testid="notr-input"
  style="--color-primary-600: #3563de; --color-gray-400: #2a292e; --color-gray-600: #cdcdcd; --color-red-600: #c51d1db6;"
>
  <label
    class="emotion-1"
    title="Notr Input"
  >
    Notr Input
  </label>
  <input
    class="emotion-2"
  />
</fieldset>
`;

exports[`Input Component > renders with default props and styles 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

<fieldset
  class="emotion-0"
  data-testid="notr-input"
  style="--color-primary-600: #3563de; --color-gray-400: #2a292e; --color-gray-600: #cdcdcd; --color-red-600: #c51d1db6;"
>
  <label
    class="emotion-1"
  >
    Notr Input
  </label>
  <input
    class="emotion-2"
  />
</fieldset>
`;

exports[`Input Component > renders with default props and styles 2`] = `
.emotion-0 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-0:focus {
  border-color: var(--color-primary-600);
}

.emotion-0 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
}

.emotion-0:focus {
  border-color: var(--color-primary-600);
}

<input
  class="emotion-0"
  placeholder="Notr Input Placeholder"
/>
`;

exports[`Input Component > renders with errors props and styles 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
  border-color: var(--color-red-600);
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-3 {
  font-size: 0.875rem;
  color: var(--color-red-600);
  font-style: italic;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
  border-color: var(--color-red-600);
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-3 {
  font-size: 0.875rem;
  color: var(--color-red-600);
  font-style: italic;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.37rem;
  border: none;
  outline: none;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.25rem;
  opacity: 0.77;
  color: var(--color-gray-300);
}

.emotion-2 {
  height: 3.75rem;
  border-radius: 0.8125rem;
  border: 1px solid var(--color-gray-600);
  padding: 0 0.5rem;
  outline: none;
  border-color: var(--color-red-600);
}

.emotion-2:focus {
  border-color: var(--color-primary-600);
}

.emotion-3 {
  font-size: 0.875rem;
  color: var(--color-red-600);
  font-style: italic;
}

<fieldset
  class="emotion-0"
  data-testid="notr-input"
  style="--color-primary-600: #3563de; --color-gray-400: #2a292e; --color-gray-600: #cdcdcd; --color-red-600: #c51d1db6;"
>
  <label
    class="emotion-1"
  >
    Notr Input
  </label>
  <input
    class="emotion-2"
  />
  <span
    class="emotion-3"
  >
    Invalid Input
  </span>
</fieldset>
`;
